= 1.0.4 = * Dynamically scale circle-diagram via some javascript and css * Added setup link when widget isn't configured yet. * Fixed scaling/overflowing issues due to translations.

--- a/admin/css/support-hours-admin.css
+++ b/admin/css/support-hours-admin.css
@@ -2,7 +2,6 @@
   padding-bottom: 40px;
   padding-right: 40px;
   position:relative;
-  display: inline-block;
   margin:20px;
 }
 .circle {
@@ -158,7 +157,21 @@
 .innerCicle:hover .text.small{
   font-size: 35px;
 }
+.smallbr{
+  display: none;
+}
+@media screen and (max-width: 1500px) {
+  .outerCircle{
+    max-width: 340px;
+  }
+}
 @media screen and (max-width: 870px) {
+  .smallbr{
+    display: block;
+  }
+  .bigbr{
+    display: none;
+  }
   .circle {
     width: 200px;
     height: 200px;
